k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: hrms-backend-service
  namespace: hrms

spec:
  selector:
    app: hrms-backend

  ports:
  - port: 8080
    targetPort: 8080

  type: ClusterIP
