k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: hrms-frontend-service
  namespace: hrms

spec:
  selector:
    app: hrms-frontend

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
